# VectorAccumulator

./: CMakeLists.txt  LICENSE  README.md
VectorAccumulator/: VectorAccumulator.hpp
cmake/: VectorAccumulatorConfig.cmake.in
lib/: .clang-format  VectorAccumulator.cpp
